--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require": {
     "php": "^8.0",
     "coreshop/payment": "^3.0",
-    "payum/payum": "dev-master"
+    "payum/payum": "^1.7"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.5.4",
