[Pimcore] make compatible with Pimcore 10.6 - explicitly require "php-http/message-factory": "^1.0"

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   "require": {
     "php": "^8.0",
     "coreshop/payment": "^3.0",
-    "payum/payum": "^1.7"
+    "payum/payum": "^1.7",
+    "php-http/message-factory": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.5.4",
