--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "php": "^8.0",
     "coreshop/payment": "^4.0",
     "payum/payum": "^1.7",
-    "php-http/message-factory": "^1.0"
+    "symfony/http-client": "^6.3"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.10",
